# Superior6Updated

./: .env.example  Cargo.toml  setup.sh
src/: auth.rs  config.rs  errors.rs  main.rs  models.rs  scoring.rs
src/handlers/: admin.rs  auth.rs  home.rs  leaderboard.rs  mod.rs  predictions.rs  user.rs
src/migrations/: 001_initial_schema.sql
src/templates/: admin.rs  auth.rs  home.rs  leaderboard.rs  mod.rs  predictions.rs  user.rs
static/css/: style.css
static/js/: app.js
templates/: base.html  home.html
templates/admin/: dashboard.html  fixtures.html  gameweeks.html  results.html
templates/auth/: login.html  register.html
templates/leaderboard/: season.html  weekly.html
templates/predictions/: current.html
templates/user/: dashboard.html
