[package]
name = "superior6"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9.6", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
time = "0.3.41"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP client (for future API integration)
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
api-integration = ["reqwest"]
